@@ -1179,6 +1179,8 @@ public class Emulator implements Runnable {
 			cmd.add("jdk.unsupported/sun.misc=ALL-UNNAMED");
 			cmd.add("--add-opens");
 			cmd.add("java.desktop/com.sun.media.sound=ALL-UNNAMED");
+			cmd.add("--add-opens");
+			cmd.add("java.desktop/javax.sound.midi=ALL-UNNAMED");
 			if (Utils.isJava17())
 				cmd.add("--enable-native-access=ALL-UNNAMED");
 		}
